administrador de colores

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: #fff;
+    background-color: rgb(243, 174, 174);
   }
