--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,6 +1,6 @@
 .header{
   display: flex;
-  background-color: beige;
+  background-color: rgb(236, 236, 180);
   justify-content: space-around;
   align-items: center;
   padding: 30px 40px;
